# crasbi

./: package-lock.json
Backend/: pyproject.toml
Backend/crasbi/: db.sqlite3  manage.py
Backend/crasbi/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Backend/crasbi/api/migrations/: 0001_initial.py
Backend/crasbi/crasbi/: asgi.py  settings.py  urls.py  wsgi.py
Frontend/: .gitignore  package-lock.json  package.json
Frontend/src/: App.jsx
Frontend/src/components/: Jobs.jsx  SourceConnector.css  SourceConnector.jsx  etl.css  etl.jsx  jobs.css
