[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Mahnoor Rana", email = "mahnoorrana2002@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.1",
    "django-filter>=23.5",
    "python-decouple>=3.8",
    "mssql-django>=1.4.0",
    "pyodbc>=4.0.39"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
